# numga

./: .gitignore  Earthfile  LICENSE  extensors.md  pyproject.toml  readme.md  setup.py  todo.md
.github/workflows/: ci.yml
numga/: context.py  dynamic_dispatch.py  flyweight.py  util.py
numga/algebra/: algebra.py  bitops.py  description.py
numga/backend/: __init__.py  readme.md
numga/examples/: conformal.py  ga_sparse.py  integrators.py  pga2d.py  tennis_racket_theorem.py  test_conformal.py  test_simplex.py
numga/multivector/: extension.py  extension_fancy.py  extension_optimized.py  factory.py  helper.py  multivector.py  namespaces.py  numerical_normalize.py  types.py
numga/operator/: abstract.py  factory.py  operator.py  sparse_tensor.py
numga/subspace/: base.py  factory.py  namespaces.py  subspace.py
operators/111/: anti_commutator_anti_product.txt  anti_commutator_product.txt  anti_geometric_product.txt  anti_inner_product.txt  anti_reverse_product.txt  anti_right_interior_product.txt  anti_scalar_product.txt  commutator_product.txt  geometric_product.txt  left_complement.txt  left_dual.txt  left_hodge.txt  reverse_product.txt  right_dual.txt  right_interior_product.txt
operators/200/: anti_geometric_product.txt  anti_left_interior_product.txt  anti_right_interior_product.txt  anti_scalar_product.txt  commutator_product.txt  degenerate.txt  geometric_product.txt  involute.txt  left_complement.txt  left_complement_dual.txt  nondegenerate.txt  outer_product.txt  regressive_product.txt  reverse_product.txt  right_contraction_product.txt  right_dual.txt  right_interior_product.txt  scalar_product.txt  squared.txt
operators/201/: anti_commutator_anti_product.txt  anti_geometric_product.txt  anti_scalar_product.txt  commutator_anti_product.txt  conjugate.txt  inner_product.txt  outer_product.txt  reverse.txt  right_dual.txt  right_interior_product.txt  symmetric_reverse_product.txt
operators/300/: anti_commutator_anti_product.txt  anti_commutator_product.txt  anti_geometric_product.txt  anti_left_interior_product.txt  anti_reverse_product.txt  (+10 more)
(+193 files in other folders)
