[tool.poetry]
name = "numga"
version = "0.1.0"
description = "Geometric Algebra in numpy and JAX"
authors = ["Eelco Hoogendoorn <hoogendoorn.eelco@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.1"
numpy-indexed = "^0.3.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7"
matplotlib = "^3"
jax = "^0.3.25"
jaxlib = "*"
einops = "*"
imageio = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
